--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,10 @@
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
 /build
+/.idea
+/app/app.iml
+/*.iml
+/MyKotlinProject.iml
